--- a/report/report.tex
+++ b/report/report.tex
@@ -49,7 +49,7 @@
 % To add some line spacing in the table
 \renewcommand{\arraystretch}{1.3}
 
-\title{Detecting agreement in a multi-party conversation}
+\title{Detecting agreement in a Multi-party Quiz}
 
 \author{Tom Byars, Cale Clark, Charlie Lyttle, Katie McAskill, Jack Miller, Zein Said, \\
 {\bf Laura Schauer, Jason Sweeney, Aron Szeles, Xander Wickham} \\
@@ -61,7 +61,7 @@ School of Mathematics and Computer Science, Heriot-Watt University, Edinburgh \\
 \maketitle
 
 \begin{abstract}
-  Today, conversational systems are expected to handle conversations in multi-party settings, especially as Socially Assistive Robots (SARs). However, practical usability remains difficult as there are additional challenges to overcome, such as speaker and addressee recognition and turn-taking. In this paper, we present our work on a multi-party conversational system, which invites two users to play a trivia game in a hospital waiting area. The system detects users' agreement or disagreement on a final answer and responds accordingly. Our evaluation includes both performance and user assessment results, with a focus on detecting user agreement. We have configured the system to be used on the ARI robot deployed in a hospital waiting area as part of the SPRING project.
+  Today, conversational systems are expected to handle conversations in multi-party settings, especially as Socially Assistive Robots (SARs). However, practical usability remains difficult as there are additional challenges to overcome, such as speaker and addressee recognition and turn-taking. In this paper, we present our work on a multi-party conversational system, which invites two users to play a trivia quiz game. The system detects users' agreement or disagreement on a final answer and responds accordingly. Our evaluation includes both performance and user assessment results, with a focus on detecting user agreement. We have configured the system to be used on the ARI robot deployed in a hospital waiting area as part of the SPRING project.
 \end{abstract}
 
 % INTRODUCTION PART
