--- a/report/report.tex
+++ b/report/report.tex
@@ -49,7 +49,7 @@
 % To add some line spacing in the table
 \renewcommand{\arraystretch}{1.3}
 
-\title{Detecting agreement in a Multi-party Quiz}
+\title{Detecting Agreement in a Multi-party Quiz}
 
 \author{Tom Byars, Cale Clark, Charlie Lyttle, Katie McAskill, Jack Miller, Zein Said, \\
 {\bf Laura Schauer, Jason Sweeney, Aron Szeles, Xander Wickham} \\
